# haze

./: .clangd  .editorconfig  .eslintrc.cjs  .gitignore  AdvancedBaseVisitor.py  CLAUDE_MODULE_HOTRELOAD_NOTES.md  CodeGenerator.py  CompilationDatabase.py  DEVELOPMENT.md  Datatype.py  Error.py  Expression.py  FunctionSymbol.py  Haze.g4  LICENSE  Location.py  ModuleCompiler.py  NODISCARD_REFACTOR_PLAN.md  Parser.py  Program.py  REACTIVE_ARRAYS_IMPL.md  README.md  ReturnVerifier.py  Scope.py  SemanticAnalyzer.py  Statement.py  Symbol.py  SymbolCollector.py  SymbolName.py  SymbolTable.py  SymbolTypeResolver.py  TM2_Dynamik.hz  a.out  biome.jsonc  configure.sh  example.hz  gl.c  haze-0.0.1.vsix  haze.toml  libinput  (+19 more)
.antlr/: Haze.interp  Haze.tokens  HazeBaseListener.java  HazeLexer.interp  HazeLexer.java  HazeLexer.tokens  HazeListener.java  HazeParser.java
.claude/: settings.local.json
.husky/: pre-commit
R&D/: Additional Numeric Semantics, Conversion Semantics, and Future Numeric Direction.md  Arrays vs Integer Bounds Checking.md  Comparison Semantics.md  Compiler & Reproducibility.md  Compound Assignment and Increment Semantics.md  Hot Reload & Module Identity.md  Human Intent around Numeric Semantics and Divisions.md  Integer Semantics and Human Intent.md  Language Design.md  Literal Semantics and Conversion Rules.md  Memory Management and Value Initialization.md  Module Memory Model & Reload Mechanics.md  Modules & Imports.md  Object Initialization.md  Panic Recovery.md  Profiling Backend - perf_event_open Migration.md  Reactivity and rx.Any.md  Reflection Features Quick Reference.md  Remember for Docs.md  The Pitch.md  Type Land, Refinement and Assertions.md  Type modifiers and Reflection.md
codeeditor/: haze.toml
docs/: typesystem-architecture.hz
extension/: haze-0.0.1.vsix  language-configuration.json  package.json  tsconfig.json  vsc-extension-quickstart.md
grammar/: Haze.interp  Haze.tokens  HazeLexer.interp  HazeLexer.py  HazeLexer.tokens  HazeListener.py  HazeParser.py  HazeVisitor.py
old_py/: CodeGenerator.py  CompilationDatabase.py  Error.py  Expression.py  Namespace.py  Program.py  ReturnVerifier.py  SemanticAnalyzer.py  Statement.py  SymbolCollector.py  SymbolTypeResolver.py  a.out
scripts/: build-error-enum.ts  build.js  profile.js  run-tests.sh
src/: CodeGenerator.ts  Config.ts  Datatype.ts  DatatypeDatabase.ts  Emit.ts  Errors.ts  Expression.ts  Module.ts  ModuleCompiler.ts  ParsedTypes.ts  Program.ts  ResolvedTypes.ts  Scope.ts  lsp.ts  (+16 more)
test/c-test/: CMakeLists.txt  a.out  new-main-thread-clean.c  new-main-thread-copy.c  new-main-thread.c  problem.c  stack-overflow-win32.c  test.c
test/c-test/old/: inspect.c  main.c  problem  test
test/c-test/win/: CMakeLists.txt  new-main-thread-clean.c  veh_win32.c
tools/regex-compiler/: CMakeLists.txt  main.c
(+486 files in other folders)
